[package]
name = "icarus-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime and execution engine for Icarus CDK"

[dependencies]
# Workspace dependencies
icarus-core.workspace = true

# External dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
linkme.workspace = true
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
rustc-hash.workspace = true
smallvec.workspace = true

[features]
default = ["async"]
async = ["tokio", "async-trait"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serial_test = { workspace = true }

[lints]
workspace = true