[package]
name = "icarus-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
icarus-core = { workspace = true }
icarus-canister = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

# Testing specific dependencies
mockall = "0.13"
proptest = "1.6"
insta = "1.42"