[package]
name = "icarus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build MCP servers that run on the Internet Computer"
keywords = ["mcp", "icp", "canister", "ai", "blockchain"]
categories = ["development-tools", "web-programming"]

[dependencies]
icarus-core = { workspace = true }
icarus-derive = { workspace = true }
icarus-canister = { workspace = true }
icarus-types = { workspace = true }

# Re-export key dependencies
rmcp = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }

[features]
default = []
test-utils = []