[package]
name = "auto-refresher"
version = "0.1.0"
edition = "2024"

[package.metadata.icarus]
claude_desktop.auto_update = true
claude_desktop.config_path = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
icarus = { path = "../..", features = ["canister"] }
icarus-canister = { path = "../../crates/icarus-canister" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.candid]
did_path = "auto_refresher.did"

[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Enable link-time optimization  
codegen-units = 1     # Single codegen unit for better optimization
strip = "debuginfo"   # Strip debug info
panic = "abort"       # Smaller binaries, matches WASM behavior
overflow-checks = false # Disable runtime overflow checks
