[package]
name = "basic-memory-example"
version = "0.1.0"
edition = "2021"

[package.metadata.icarus]
claude_desktop.auto_update = true
claude_desktop.config_path = ""

[dependencies]
icarus = { path = "../..", features = ["canister"] }
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Enable link-time optimization  
codegen-units = 1     # Single codegen unit for better optimization
strip = "debuginfo"   # Strip debug info
panic = "abort"       # Smaller binaries, matches WASM behavior
overflow-checks = false # Disable runtime overflow checks
