[package]
name = "http-fetcher"
version = "0.1.0"
edition = "2021"

[package.metadata.icarus]
claude_desktop.auto_update = true
claude_desktop.config_path = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
icarus = { path = "../../", features = ["canister"] }
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Enable link-time optimization  
codegen-units = 1     # Single codegen unit for better optimization
strip = "debuginfo"   # Strip debug info
panic = "abort"       # Smaller binaries, matches WASM behavior
overflow-checks = false # Disable runtime overflow checks
