[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
icarus = { path = "../../", features = ["http", "storage"] }
ic-cdk = "0.18"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
uuid = "1.0"
url = "2.4"

[package.metadata.icarus]
title = "API Gateway"
description = "Production-ready template for creating API integrations and external service connectors with caching, rate limiting, and monitoring"
website = "https://github.com/anthgur/icarus-sdk"