[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
icarus = { path = "../../", features = ["timers", "storage"] }
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"

[package.metadata.icarus]
title = "Task Scheduler"
description = "Production-ready template for time-based operations, cron jobs, and background task processing on ICP"
website = "https://github.com/anthgur/icarus-sdk"